// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`getOAuth2Authorize should redirect 2`] = `
{
  "codeGranterAcknowledgerAcknowledgeCalls": [],
  "codeGranterAuthenticatorAuthenticateCalls": [],
  "codeGranterAuthorizerAuthorizeCalls": [
    [
      {
        "clientId": "abbacaca-abba-caca-abba-cacaabbacaca",
        "redirectURI": "https://www.example.com",
        "scope": "user",
      },
      {},
    ],
  ],
  "logCalls": [],
  "tokenGranterAcknowledgerAcknowledgeCalls": [],
  "tokenGranterAuthorizerAuthorizeCalls": [],
}
`;

exports[`getOAuth2Authorize should redirect with an error when some 2`] = `
{
  "codeGranterAcknowledgerAcknowledgeCalls": [],
  "codeGranterAuthenticatorAuthenticateCalls": [],
  "codeGranterAuthorizerAuthorizeCalls": [],
  "logCalls": [
    [
      "debug",
      "👫 - OAuth2 authorize error.",
    ],
  ],
  "tokenGranterAcknowledgerAcknowledgeCalls": [],
  "tokenGranterAuthorizerAuthorizeCalls": [],
}
`;
